// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index when Get Component service endpoint returns a component when the component has no Scanner errors renders no Scanner errors 1`] = `
<div>
  <h1
    class="text-info my-3"
  >
    Test Component Name 1 - Errors
  </h1>
   
  <div
    class="my-3"
  >
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1"
      target="_self"
    >
      Info
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/dependencies"
      target="_self"
    >
      
    Dependencies
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/response-times"
      target="_self"
    >
      
    Response Times
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/downstream-response-times"
      target="_self"
    >
      
    Downstream Response Times
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/call-graphs"
      target="_self"
    >
      
    Call Graphs
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/cross-functional-requirements"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/tech-debts"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/tests"
      target="_self"
    >
      Tests
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/errors"
      target="_self"
    >
      Errors
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/openapi-specs"
      target="_self"
    >
      
    OpenAPI Specs
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/repo"
      target="_self"
    >
      Repo
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/readme"
      target="_self"
    >
      README
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/to-dos"
      target="_self"
    >
      To Dos
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/lines-of-code"
      target="_self"
    >
      
    Lines of Code
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/software-repositories"
      target="_self"
    >
      
    Software Repositories
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/software"
      target="_self"
    >
      Software
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/imports"
      target="_self"
    >
      Imports
    </a>
  </div>
   
  <div>
    <div
      class="main"
    >
      <div
        class="card my-3"
      >
        <!---->
        <!---->
        <div
          class="list-group"
        >
          <div
            class="list-group-item list-group-item-success"
          >
            <span
              class=""
            >
              0
            </span>
            
          errors
        
          </div>
        </div>
        <!---->
        <!---->
      </div>
       
      <div
        class="card my-3"
      >
        <!---->
        <!---->
        <div
          class="card-body"
        >
          <h4
            class="card-title"
          >
            0 Errors
          </h4>
          <!---->
          <p
            class="card-text"
          >
            <!---->
          </p>
        </div>
        <!---->
        <!---->
      </div>
    </div>
     
    <div
      class="panel"
    >
      <div>
        <!---->
         
        <fieldset
          class="form-group"
          id="__BVID__68"
        >
          <legend
            class="bv-no-focus-ring col-form-label pt-0"
            id="__BVID__68__BV_label_"
            tabindex="-1"
          >
            Teams
          </legend>
          <div>
            <div
              class="bv-no-focus-ring"
              id="__BVID__69"
              role="group"
              tabindex="-1"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <input
                  class="custom-control-input"
                  id="__BVID__69_BV_option_0"
                  name="team"
                  type="checkbox"
                  value="test-team-id-1-1"
                />
                <label
                  class="custom-control-label"
                  for="__BVID__69_BV_option_0"
                >
                  <span>
                    test-team-id-1-1
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox"
              >
                <input
                  class="custom-control-input"
                  id="__BVID__69_BV_option_1"
                  name="team"
                  type="checkbox"
                  value="test-team-id-1-2"
                />
                <label
                  class="custom-control-label"
                  for="__BVID__69_BV_option_1"
                >
                  <span>
                    test-team-id-1-2
                  </span>
                </label>
              </div>
            </div>
            <!---->
            <!---->
            <!---->
          </div>
        </fieldset>
         
        <fieldset
          class="form-group"
          id="__BVID__72"
        >
          <legend
            class="bv-no-focus-ring col-form-label pt-0"
            id="__BVID__72__BV_label_"
            tabindex="-1"
          >
            Tags
          </legend>
          <div>
            <div
              class="bv-no-focus-ring"
              id="__BVID__73"
              role="group"
              tabindex="-1"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <input
                  class="custom-control-input"
                  id="__BVID__73_BV_option_0"
                  name="tag"
                  type="checkbox"
                  value="test-tag-1-1"
                />
                <label
                  class="custom-control-label"
                  for="__BVID__73_BV_option_0"
                >
                  <span>
                    test-tag-1-1
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox"
              >
                <input
                  class="custom-control-input"
                  id="__BVID__73_BV_option_1"
                  name="tag"
                  type="checkbox"
                  value="test-tag-1-2"
                />
                <label
                  class="custom-control-label"
                  for="__BVID__73_BV_option_1"
                >
                  <span>
                    test-tag-1-2
                  </span>
                </label>
              </div>
            </div>
            <!---->
            <!---->
            <!---->
          </div>
        </fieldset>
         
        <fieldset
          class="form-group"
          id="__BVID__76"
        >
          <legend
            class="bv-no-focus-ring col-form-label pt-0"
            id="__BVID__76__BV_label_"
            tabindex="-1"
          >
            Component Types
          </legend>
          <div>
            <div
              class="bv-no-focus-ring"
              id="__BVID__77"
              role="group"
              tabindex="-1"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <input
                  class="custom-control-input"
                  id="__BVID__77_BV_option_0"
                  name="componentTypeId"
                  type="checkbox"
                  value="test-component-type-id-1"
                />
                <label
                  class="custom-control-label"
                  for="__BVID__77_BV_option_0"
                >
                  <span>
                    test-component-type-id-1
                  </span>
                </label>
              </div>
            </div>
            <!---->
            <!---->
            <!---->
          </div>
        </fieldset>
         
        <fieldset
          class="form-group"
          id="__BVID__79"
        >
          <legend
            class="bv-no-focus-ring col-form-label pt-0"
            id="__BVID__79__BV_label_"
            tabindex="-1"
          >
            Platforms
          </legend>
          <div>
            <div
              class="bv-no-focus-ring"
              id="__BVID__80"
              role="group"
              tabindex="-1"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <input
                  class="custom-control-input"
                  id="__BVID__80_BV_option_0"
                  name="platformId"
                  type="checkbox"
                  value="undefined"
                />
                <label
                  class="custom-control-label"
                  for="__BVID__80_BV_option_0"
                >
                  <span>
                    undefined
                  </span>
                </label>
              </div>
            </div>
            <!---->
            <!---->
            <!---->
          </div>
        </fieldset>
         
        <div
          class="form-group"
          id="__BVID__82"
          role="group"
        >
          <label
            class="d-block"
            for="component-filter"
            id="__BVID__82__BV_label_"
          >
            Component
          </label>
          <div>
            <select
              class="custom-select custom-select-sm"
              id="component-filter"
            >
              <option
                value=""
              >
                Please select a component
              </option>
              <option
                value="test-component-id-1"
              >
                test-component-id-1
              </option>
            </select>
            <!---->
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Index when Get Component service endpoint returns a component when the component has scanner errors renders the details of the scanner errors 1`] = `
<div>
  <h1
    class="text-info my-3"
  >
    Test Component Name 1 - Errors
  </h1>
   
  <div
    class="my-3"
  >
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1"
      target="_self"
    >
      Info
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/dependencies"
      target="_self"
    >
      
    Dependencies
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/response-times"
      target="_self"
    >
      
    Response Times
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/downstream-response-times"
      target="_self"
    >
      
    Downstream Response Times
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/call-graphs"
      target="_self"
    >
      
    Call Graphs
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/cross-functional-requirements"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/tech-debts"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/tests"
      target="_self"
    >
      Tests
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/errors"
      target="_self"
    >
      Errors
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/openapi-specs"
      target="_self"
    >
      
    OpenAPI Specs
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/repo"
      target="_self"
    >
      Repo
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/readme"
      target="_self"
    >
      README
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/to-dos"
      target="_self"
    >
      To Dos
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/lines-of-code"
      target="_self"
    >
      
    Lines of Code
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/software-repositories"
      target="_self"
    >
      
    Software Repositories
  
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/software"
      target="_self"
    >
      Software
    </a>
     
    <a
      class="btn btn-secondary"
      href="/components/test-component-id-1/imports"
      target="_self"
    >
      Imports
    </a>
  </div>
   
  <div>
    <div
      class="main"
    >
      <div
        class="card my-3"
      >
        <!---->
        <!---->
        <div
          class="list-group"
        >
          <div
            class="list-group-item list-group-item-danger"
          >
            <span
              class="display-1"
            >
              2
            </span>
            
          errors
        
          </div>
        </div>
        <!---->
        <!---->
      </div>
       
      <div
        class="card my-3"
      >
        <!---->
        <!---->
        <div
          class="card-body"
        >
          <h4
            class="card-title"
          >
            2 Errors
          </h4>
          <!---->
          <p
            class="card-text"
          >
            <table
              class="table table-dark"
            >
              <thead>
                <tr>
                  <th
                    class="component table-primary"
                  >
                    Component
                  </th>
                   
                  <th
                    class="scanner"
                  >
                    Scanner
                  </th>
                   
                  <th
                    class="teams"
                  >
                    Teams
                  </th>
                   
                  <th
                    class="error"
                  >
                    Error
                  </th>
                </tr>
              </thead>
               
              <tbody>
                <tr>
                  <td
                    class="component table-primary"
                  >
                    <a
                      href="/components/test-component-id-1"
                    >
                      Test Component Name 1
                    </a>
                  </td>
                   
                  <td
                    class="scanner"
                  >
                    test-scanner-id-1-1
                  </td>
                   
                  <td
                    class="teams"
                  >
                    <ul>
                      <li>
                        <a
                          class="team-name"
                          href="/teams/test-team-id-1-1"
                        >
                          test-team-id-1-1
                        </a>
                         
                        <!---->
                         
                        <!---->
                      </li>
                      <li>
                        <a
                          class="team-name"
                          href="/teams/test-team-id-1-2"
                        >
                          test-team-id-1-2
                        </a>
                         
                        <!---->
                         
                        <!---->
                      </li>
                    </ul>
                  </td>
                   
                  <td
                    class="error"
                  >
                    <ul>
                      <li>
                        
            Test Scanner Error Message 1 1
          
                      </li>
                      <li>
                        
            Test Scanner Error Message 1 1 2
          
                      </li>
                    </ul>
                  </td>
                </tr>
                <tr>
                  <td
                    class="component table-primary"
                  >
                    <a
                      href="/components/test-component-id-1"
                    >
                      Test Component Name 1
                    </a>
                  </td>
                   
                  <td
                    class="scanner"
                  >
                    test-scanner-id-1-2
                  </td>
                   
                  <td
                    class="teams"
                  >
                    <ul>
                      <li>
                        <a
                          class="team-name"
                          href="/teams/test-team-id-1-1"
                        >
                          test-team-id-1-1
                        </a>
                         
                        <!---->
                         
                        <!---->
                      </li>
                      <li>
                        <a
                          class="team-name"
                          href="/teams/test-team-id-1-2"
                        >
                          test-team-id-1-2
                        </a>
                         
                        <!---->
                         
                        <!---->
                      </li>
                    </ul>
                  </td>
                   
                  <td
                    class="error"
                  >
                    <ul>
                      <li>
                        
            Test Scanner Error Message 1 2
          
                      </li>
                      <li>
                        
            Test Scanner Error Message 1 2 2
          
                      </li>
                    </ul>
                  </td>
                </tr>
              </tbody>
            </table>
          </p>
        </div>
        <!---->
        <!---->
      </div>
    </div>
     
    <div
      class="panel"
    >
      <div>
        <!---->
         
        <fieldset
          class="form-group"
          id="__BVID__117"
        >
          <legend
            class="bv-no-focus-ring col-form-label pt-0"
            id="__BVID__117__BV_label_"
            tabindex="-1"
          >
            Teams
          </legend>
          <div>
            <div
              class="bv-no-focus-ring"
              id="__BVID__118"
              role="group"
              tabindex="-1"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <input
                  class="custom-control-input"
                  id="__BVID__118_BV_option_0"
                  name="team"
                  type="checkbox"
                  value="test-team-id-1-1"
                />
                <label
                  class="custom-control-label"
                  for="__BVID__118_BV_option_0"
                >
                  <span>
                    test-team-id-1-1
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox"
              >
                <input
                  class="custom-control-input"
                  id="__BVID__118_BV_option_1"
                  name="team"
                  type="checkbox"
                  value="test-team-id-1-2"
                />
                <label
                  class="custom-control-label"
                  for="__BVID__118_BV_option_1"
                >
                  <span>
                    test-team-id-1-2
                  </span>
                </label>
              </div>
            </div>
            <!---->
            <!---->
            <!---->
          </div>
        </fieldset>
         
        <fieldset
          class="form-group"
          id="__BVID__121"
        >
          <legend
            class="bv-no-focus-ring col-form-label pt-0"
            id="__BVID__121__BV_label_"
            tabindex="-1"
          >
            Tags
          </legend>
          <div>
            <div
              class="bv-no-focus-ring"
              id="__BVID__122"
              role="group"
              tabindex="-1"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <input
                  class="custom-control-input"
                  id="__BVID__122_BV_option_0"
                  name="tag"
                  type="checkbox"
                  value="test-tag-1-1"
                />
                <label
                  class="custom-control-label"
                  for="__BVID__122_BV_option_0"
                >
                  <span>
                    test-tag-1-1
                  </span>
                </label>
              </div>
              <div
                class="custom-control custom-checkbox"
              >
                <input
                  class="custom-control-input"
                  id="__BVID__122_BV_option_1"
                  name="tag"
                  type="checkbox"
                  value="test-tag-1-2"
                />
                <label
                  class="custom-control-label"
                  for="__BVID__122_BV_option_1"
                >
                  <span>
                    test-tag-1-2
                  </span>
                </label>
              </div>
            </div>
            <!---->
            <!---->
            <!---->
          </div>
        </fieldset>
         
        <fieldset
          class="form-group"
          id="__BVID__125"
        >
          <legend
            class="bv-no-focus-ring col-form-label pt-0"
            id="__BVID__125__BV_label_"
            tabindex="-1"
          >
            Component Types
          </legend>
          <div>
            <div
              class="bv-no-focus-ring"
              id="__BVID__126"
              role="group"
              tabindex="-1"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <input
                  class="custom-control-input"
                  id="__BVID__126_BV_option_0"
                  name="componentTypeId"
                  type="checkbox"
                  value="test-component-type-id-1"
                />
                <label
                  class="custom-control-label"
                  for="__BVID__126_BV_option_0"
                >
                  <span>
                    test-component-type-id-1
                  </span>
                </label>
              </div>
            </div>
            <!---->
            <!---->
            <!---->
          </div>
        </fieldset>
         
        <fieldset
          class="form-group"
          id="__BVID__128"
        >
          <legend
            class="bv-no-focus-ring col-form-label pt-0"
            id="__BVID__128__BV_label_"
            tabindex="-1"
          >
            Platforms
          </legend>
          <div>
            <div
              class="bv-no-focus-ring"
              id="__BVID__129"
              role="group"
              tabindex="-1"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <input
                  class="custom-control-input"
                  id="__BVID__129_BV_option_0"
                  name="platformId"
                  type="checkbox"
                  value="undefined"
                />
                <label
                  class="custom-control-label"
                  for="__BVID__129_BV_option_0"
                >
                  <span>
                    undefined
                  </span>
                </label>
              </div>
            </div>
            <!---->
            <!---->
            <!---->
          </div>
        </fieldset>
         
        <div
          class="form-group"
          id="__BVID__131"
          role="group"
        >
          <label
            class="d-block"
            for="component-filter"
            id="__BVID__131__BV_label_"
          >
            Component
          </label>
          <div>
            <select
              class="custom-select custom-select-sm"
              id="component-filter"
            >
              <option
                value=""
              >
                Please select a component
              </option>
              <option
                value="test-component-id-1"
              >
                test-component-id-1
              </option>
            </select>
            <!---->
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
